--- a/site/index.html
+++ b/site/index.html
@@ -5,13 +5,18 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="description" content="Блог">
     <title>Сайт </title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <nav>
-        Навигация
+        <a href="1.html">О компании</a>
+        <a href="2.html">Портфолио</a>
+        <a href="3.html">Команда</a>
+        <a href="4.html">Как мы работаем</a>
+        <a href="5.html">Отзывы клиентов</a>
+        <a href="5.html">Оставить заявку</a>
       </nav>
       <h1>Поможем сделать вашу квартиру уютнее </h1>
     </header>
