--- a/site/index.html
+++ b/site/index.html
@@ -19,29 +19,69 @@
         <a href="5.html">Оставить заявку</a>
       </nav>
       <h1>Поможем сделать вашу квартиру уютнее </h1>
+      <p>Подбираем текстиль, мебель и аксессуары под ваш интерьер, находим магазины и помогаем организовать доставку </p>
+      <button type="button" name="button">Оставить заявку</button>
     </header>
     <main>
       <section>
         <h2>О нас</h2>
+        <img src="img/about.png" width="189" height="255" alt="lorem"></a>
         <p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
         <p>Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать: « Да! Это именно то, что действительно достойно моего дома!»</p>
       </section>
-      <aside></aside>
+      <aside>
+      5  лет опыта
+      100 проектов
+      10 наград
+      </aside>
       <section>
         <h2>Наши работы</h2>
+        <h3>Квартира-студия 30 кв.м.</h3>
+        <p>В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
+        <img src="img/works/work1.png" width="189" height="255" alt="lorem"></a>
+        <img src="img/works/work2.png" width="189" height="255" alt="lorem"></a>
+        <img src="img/works/work3.png" width="189" height="255" alt="lorem"></a>
+        <img src="img/works/work4.png" width="189" height="255" alt="lorem"></a>
+        <p>Смотреть ещё </p>
       </section>
       <section>
         <h2>Команда</h2>
+        <img src="img/team/member1.png" width="189" height="255" alt="lorem"></a>
+        <p>Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается и помогает сделать вашу квартиру красивой и уютной.</p>
+        <img src="img/team/member2.png" width="189" height="255" alt="lorem"></a>
+        <p>С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы и ответит на все вопросы.</p>
+        <img src="img/team/member3.png" width="189" height="255" alt="lorem"></a>
+        <p>Катя тоже занимается дизайном. Она всегда находит общий язык с клиентами и точно знает, как обустроить дом так, чтобы вам понравилось.</p>
+      </section>
+      <section>
+        <h2>Как мы работаем</h2>
+        <p>Знакомимся, выезжаем на объект, утверждаем концепцию, подписываем договор.</p>
+        <p>Подбираем мебель, текстиль, аксессуары. Делаем 3D-визуализацию.</p>
+        <p>Находим нужные магазины, помогаем с доставкой и оплатой товаров.</p>
+        <p>Воплощаем проект в жизнь: расставляем мебель и цветы, вешаем шторы, находим места для мелочей</p>
       </section>
       <section>
         <h2>Отзывы</h2>
+        <p>«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.
+          Работа шла быстро, было очень приятно общаться и взаимодествовать с сотрудниками. Не ожидала, что это будет так легко!
+          Буду советовать и своим друзьям к вам обращаться!»</p>
+        <p>АННА БЕЛОВСКАЯ</p>
+        <img src="img/feedback/feedback1.png" width="189" height="255" alt="lorem"></a>
+        <img src="img/feedback/feedback2.png" width="189" height="255" alt="lorem"></a>
       </section>
       <section>
         <h2>Оставить заявку</h2>
+        <p>Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.</p>
+        <p>Ваше имя</p>
+        <p>Введите телефон</p>
+        <button type="button" name="button">Оставить заявку</button>
+        <img src="img/map.png" width="189" height="255" alt="lorem"></a>
       </section>
     </main>
     <footer>
-      Подвал сайта
+      <p>+7 (981) 857-46-24</p>
+      <p>г. Санкт-петербург, ул. Большая Конюшенная, 19</p>
+      <p>ИП Королёва А.А.</p>
     </footer>
   </body>
 </html>
