--- a/site/index.html
+++ b/site/index.html
@@ -25,10 +25,14 @@
     <main>
       <section>
         <h2>О нас</h2>
-        <img src="img/about.png" width="189" height="255" alt="lorem"></a>
-        <p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
-        <p>Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать: « Да! Это именно то, что действительно достойно моего дома!»</p>
-      </section>
+        <div class="">
+          <img src="img/about.png" width="189" height="255" alt="lorem"></a>
+        </div>
+        <div class="">
+          <p>Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
+          <p>Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать: « Да! Это именно то, что действительно достойно моего дома!»</p>
+        </div>
+        </section>
       <aside>
       5  лет опыта
       100 проектов
