--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <header>
+      <div class="container">
+       <img class="logo" src="img/logo.png" alt="Логотип студии">
+       <h1>SKANDI</h1>
       <nav>
         <a href="1.html">О компании</a>
         <a href="2.html">Портфолио</a>
@@ -18,9 +21,10 @@
         <a href="5.html">Отзывы клиентов</a>
         <a href="5.html">Оставить заявку</a>
       </nav>
-      <h1>Поможем сделать вашу квартиру уютнее </h1>
+      <h2>Поможем сделать вашу квартиру уютнее </h2>
       <p>Подбираем текстиль, мебель и аксессуары под ваш интерьер, находим магазины и помогаем организовать доставку </p>
       <button type="button" name="button">Оставить заявку</button>
+      </div>
     </header>
     <main>
       <section>
